[tool.poetry]
name = "lektor-leaflet-geojson"
version = "0.2.0"
description = "Lektor template filter to convert geojson objects to Leaflet maps"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cigar-factory/lektor-leaflet-geojson"
keywords = ["Lektor plugin"]
classifiers = [
    "Framework :: Lektor",
    "Environment :: Plugins",
]

[tool.poetry.dependencies]
python = "^3.7"
lektor = "3.*"

[tool.poetry.dev-dependencies]
isort = "^5.10"
flake8 = "^5.0.4"
black = "==22.12.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."lektor.plugins"]
leaflet-geojson = "lektor_leaflet_geojson:LeafletGeoJsonPlugin"
